--- a/css/style.css
+++ b/css/style.css
@@ -502,6 +502,11 @@ body {
   height: 40px;
 }
 
+.footer-socials {
+  display: flex;
+  justify-content: space-between;
+}
+
 .footer {
   background-color: var(--navy-blue);
   padding: 100px 0 100px;
@@ -734,6 +739,7 @@ body {
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus {
@@ -761,6 +767,7 @@ body {
   border: 1px solid rgba(46, 47, 66, 0.4);
   resize: none;
   outline: transparent;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-textarea::placeholder {
@@ -772,4 +779,67 @@ body {
 
 .modal-textarea:focus {
   border-color: var(--color-iris);
+}
+
+.check-text {
+  color: #8e8f99;
+  font-size: 12px;
+  letter-spacing: 0.04em;
+  display: inline-flex;
+  align-items: center;
+}
+
+.privacy-link {
+  color: #4d5ae5;
+  letter-spacing: 0.04em;
+  text-decoration-line: underline;
+}
+
+.check-text span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  fill: transparent;
+  margin-right: 8px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-check:checked + .check-text span {
+  background-color: var(--color-iris);
+  border: none;
+  fill: #f4f4fd;
+}
+
+.modal-check:focus + .check-text span {
+  border-color: var(--color-iris);
+}
+
+.modal-form-btn {
+  margin: 0 auto;
+  margin-top: 24px;
+  display: block;
+  cursor: pointer;
+  border: none;
+  width: 169px;
+  padding: 16px 32px;
+  border-radius: 4px;
+  background-color: #4d5ae5;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-btn:hover,
+.modal-form-btn:focus {
+  background-color: var(--ocean);
+}
+
+.form-btn-text {
+  color: #fff;
+  text-align: center;
+  line-height: 1.5;
+  letter-spacing: 0.06em;
 }
