--- a/css/style.css
+++ b/css/style.css
@@ -502,11 +502,6 @@ body {
   height: 40px;
 }
 
-.footer-socials {
-  display: flex;
-  justify-content: space-between;
-}
-
 .footer {
   background-color: var(--navy-blue);
   padding: 100px 0 100px;
@@ -520,6 +515,60 @@ body {
   letter-spacing: 0.02em;
   max-width: 264px;
 }
+
+.footer-form {
+  display: flex;
+  gap: 24px;
+}
+
+.footer-form-label::placeholder {
+  color: #ffffff;
+}
+
+.footer-input {
+  width: 264px;
+  height: 40px;
+  border: 1px solid #ffffff;
+  border-radius: 4px;
+  color: #ffffff;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+}
+
+.footer-form-text {
+  color: var(--white, #ffffff);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+.footer-form-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  border: none;
+  font-family: "Roboto", sans-serif;
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  min-width: 165px;
+  height: 40px;
+  color: #ffffff;
+  background-color: #4d5ae5;
+}
+
+.footer-form-icon {
+  margin-left: 16px;
+}
+
 /* Portfolio-Page */
 
 /* Header */
@@ -713,12 +762,15 @@ body {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  margin-top: 48px;
   margin-bottom: 16px;
 }
 
 .modal-field {
-  margin-bottom: 8px;
+  margin-bottom: 16px;
+}
+
+.modal {
+  padding: 72px 24px 24px 24px;
 }
 
 .input-wrap {
@@ -732,6 +784,8 @@ body {
   padding: 0 38px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   outline: transparent;
+  background-color: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input-icon {
@@ -739,7 +793,7 @@ body {
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus {
@@ -751,23 +805,29 @@ body {
 }
 
 .input-label {
+  display: block;
   color: #8e8f99;
   font-size: 12px;
   font-weight: 400;
-  line-height: 1.6;
-  letter-spacing: 0.04px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
   margin-bottom: 4px;
 }
 
 .modal-textarea {
   width: 100%;
   height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
   border-radius: 4px;
+  letter-spacing: 0.04em;
   padding: 8px 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
+  color: rgba(46, 47, 66, 0.4);
   resize: none;
   outline: transparent;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-textarea::placeholder {
@@ -801,6 +861,7 @@ body {
   justify-content: center;
   width: 16px;
   height: 16px;
+  line-height: 1.17;
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   fill: transparent;
@@ -808,13 +869,20 @@ body {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-check:checked + .check-text span {
+.checkbox-span {
+  display: inline-flex;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-check:checked + .check-text .checkbox-span {
   background-color: var(--color-iris);
   border: none;
   fill: #f4f4fd;
 }
 
-.modal-check:focus + .check-text span {
+.modal-check:focus + .check-text .checkbox-span {
   border-color: var(--color-iris);
 }
 
@@ -824,12 +892,14 @@ body {
   display: block;
   cursor: pointer;
   border: none;
-  width: 169px;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+  min-width: 169px;
   padding: 16px 32px;
   border-radius: 4px;
   background-color: #4d5ae5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-btn:hover,
