--- a/css/style.css
+++ b/css/style.css
@@ -766,7 +766,7 @@ body {
 }
 
 .modal-field {
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
 
 .modal {
@@ -844,6 +844,7 @@ body {
 .check-text {
   color: #8e8f99;
   font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   display: inline-flex;
   align-items: center;
@@ -869,6 +870,10 @@ body {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-checkbox {
+  margin-bottom: 24px;
+}
+
 .checkbox-span {
   display: inline-flex;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -877,13 +882,13 @@ body {
 }
 
 .modal-check:checked + .check-text .checkbox-span {
-  background-color: var(--color-iris);
+  background-color: var(--ocean);
   border: none;
   fill: #f4f4fd;
 }
 
 .modal-check:focus + .check-text .checkbox-span {
-  border-color: var(--color-iris);
+  border-color: var(--ocean);
 }
 
 .modal-form-btn {
@@ -911,5 +916,5 @@ body {
   color: #fff;
   text-align: center;
   line-height: 1.5;
-  letter-spacing: 0.06em;
+  letter-spacing: 0.04em;
 }
