--- a/css/style.css
+++ b/css/style.css
@@ -516,6 +516,10 @@ body {
   max-width: 264px;
 }
 
+.footer-form-container {
+  margin-left: 80px;
+}
+
 .footer-form {
   display: flex;
   gap: 24px;
@@ -545,6 +549,7 @@ body {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-bottom: 16px;
 }
 
 .footer-form-btn {
@@ -830,6 +835,10 @@ body {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-form-textarea {
+  margin-bottom: 16px;
+}
+
 .modal-textarea::placeholder {
   color: rgba(46, 47, 66, 0.4);
   font-size: 12px;
@@ -857,7 +866,7 @@ body {
 }
 
 .check-text span {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   width: 16px;
@@ -868,6 +877,9 @@ body {
   fill: transparent;
   margin-right: 8px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-checkbox {
