--- a/css/style.css
+++ b/css/style.css
@@ -886,11 +886,8 @@ body {
   margin-bottom: 24px;
 }
 
-.checkbox-span {
+.check-text .checkbox-span {
   display: inline-flex;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-check:checked + .check-text .checkbox-span {
