--- a/css/style.css
+++ b/css/style.css
@@ -855,7 +855,6 @@ body {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  display: inline-flex;
   align-items: center;
 }
 
@@ -866,9 +865,6 @@ body {
 }
 
 .check-text .checkbox-span {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
   width: 16px;
   height: 16px;
   line-height: 1.17;
@@ -880,6 +876,12 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-span {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .modal-checkbox {
