--- a/css/style.css
+++ b/css/style.css
@@ -568,6 +568,12 @@ body {
   height: 40px;
   color: #ffffff;
   background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-form-btn:hover,
+.footer-form-btn:focus{
+  background-color: #404bbf;
 }
 
 .footer-form-icon {
